--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ribbit - A Treehouse Project</title>
+    <title>Dude What's My Speed?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
-    <link href="css/my-styles.css" rel="stylesheet" media="screen">
+    <%=stylesheet_link_tag "application", media: "screen" %>
   </head>
-
   <body>
+
+    <!-- Navbar -->
+     <div class="navbar navbar-inverse navbar-fixed-top">
+       <div class="container">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+         </button>
+
+         <a class="navbar-brand text-muted" href="#">Ribbit muted</a>
+         <div class="collapse navbar-collapse">
+
+           <ul class="nav navbar-nav navbar-right">
+             <li class="active"><a href="#">Home</a></li>
+             <li><a href="#">About Ribbit</a></li>
+
+             <li class="dropdown">
+               <a data-toggle="dropdown" data-target="#">Treehouse<b class="caret">
+               </b></a>
+               <ul class="dropdown-menu">
+                 <li><a href="#">About Treehouse</a></li>
+                 <li><a href="#">Video Library</a></li>
+                 <li><a href="#">Learning Adventures</a></li>
+                 <li class="divider"></li>
+                 <li><a href="#">Plans &amp; Pricing</a></li>
+               </ul>
+             </li>
+           </ul>
+
+         </div>
+       </div>
+     </div> <!-- End navbar -->
+
+
+
   <h1>Hello world</h1>
   <div>
       <p>&copy; 2017 DudeWhatsMySpeed? - By Trish Griego</p>
@@ -18,7 +51,7 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
    <script src="http://code.jquery.com/jquery.js"></script>
    <!-- Include all compiled plugins (below), or include individual files as needed -->
-   <script src="js/bootstrap.min.js"></script>
+   <%=javascript_include_tag "application" %>
 
   </body>
 </html>
