--- a/app/assets/stylesheets/my-styles.css
+++ b/app/assets/stylesheets/my-styles.css
@@ -7,24 +7,37 @@ body {
   max-resolution: 1000px;
 }
 
-/*Jumbotron ======================================*/
-
-.jumbotron {
-  text-align: center;
+.green {
   background-color: yellow;
 }
 
+/* navbar */
+.navbar-inverse {
+    background-color: yellow;
+    border-color: pink;
+}
+
+
+
+
+/*Jumbotron ======================================*/
+
+/*.jumbotron {
+  text-align: center;
+  background-color: yellow;
+}*/
+
 /* Glyphicons ======================================*/
 
-.glyphicon {
+/*.glyphicon {
   font-size: 3em;
   display: block;
   text-align: center;
   color: #3a878D;
-}
+}*/
 
 /* Carousel ======================================*/
-
+/*
 .carousel-indicators {
   bottom: 0;
 }
@@ -34,7 +47,7 @@ body {
 }
 .carousel-indicators li {
   border-color: #222;
-}
+}*/
 
 /*attempted to fix the changing of sizes due to content in b/n slides.*/
 /*
