--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -7,8 +7,8 @@
   </head>
   <body>
 
-    <!-- Navbar -->
-     <div class="navbar navbar-inverse navbar-fixed-top">
+  <!-- Navbar -->
+     <div class="navbar navbar-default navbar-fixed-top">
        <div class="container">
          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
@@ -16,12 +16,12 @@
             <span class="icon-bar"></span>
          </button>
 
-         <a class="navbar-brand text-muted" href="#">Ribbit muted</a>
+         <a class="navbar-brand text-muted" href="#">Dude What's My Speed?</a>
          <div class="collapse navbar-collapse">
 
            <ul class="nav navbar-nav navbar-right">
              <li class="active"><a href="#">Home</a></li>
-             <li><a href="#">About Ribbit</a></li>
+             <li><a href="#">About</a></li>
 
              <li class="dropdown">
                <a data-toggle="dropdown" data-target="#">Treehouse<b class="caret">
